nuxtend/styles/settings.scss
@use "vuetify/settings" with (
  // Disabling color packs
  // https://vuetifyjs.com/en/features/sass-variables/#disabling-color-packs
  $color-pack: false,

  // global overrides
  $body-font-family: "Work Sans",
  $heading-font-family: "Work Sans",
  $font-size-root: 1rem,
  $typography: (
    "h1": (
      "size": 3rem,
      "weight": 600,
      "line-height": 3.75rem,
    ),
    "h2": (
      "size": 2.25rem,
      "weight": 300,
      "line-height": 3rem,
    ),
    "h3": (
      "size": 1.875rem,
      "weight": 400,
      "line-height": 2.625rem,
    ),
    "h4": (
      "size": 1.5rem,
      "weight": 500,
      "line-height": 2.125rem,
    ),
    "h5": (
      "size": 1.375rem,
      "weight": 500,
      "line-height": 2rem,
    ),
    //Text 2
    "subtitle-1": (
        "size": 1.25rem,
        "line-height": 2rem,
        "weight": 500,
      ),
    // Text 3
    "subtitle-2": (
        "size": 1.125rem,
        "line-height": 1.875rem,
      ),
    // Text 4
    "body-1": (
        "size": 1rem,
        "weight": 400,
        "line-height": 1.5,
        "text-transform": none,
      ),
    // Text 5
    "body-2": (
        "size": 0.875rem,
        "weight": 400,
        "line-height": 1.425,
        "text-transform": none,
      ),
    "button": (
      "size": 0.875rem,
      "weight": 500,
      "line-height": 2.6,
      "text-transform": uppercase,
    )
  ),

  // app-bar overrides
  $app-bar-border-style: solid,
  $app-bar-elevation: 0,
  $app-bar-prominent-height: 64px,

  // snackbar overrides
  $snackbar-background: rgb(var(--v-theme-error-background)),
  $snackbar-color: rgb(var(--v-theme-high-emphasis)),
  $snackbar-elevation: 0,

  // breadcrumb overrides
  $breadcrumbs-item-disabled-opacity: true,

  // expansion panel overrides
  $expansion-panel-text-padding: 8px 0px 16px,

  // textarea overrides
  $label-color: rgb(var(--v-theme-medium-emphasis)),
  $label-opacity: unset,

  // card overrides
  $card-actions-padding: 24px,
  $button-card-actions-margin: 12px
);

